Thu Jun  5 01:38:04 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (SONAME_FLAGS): Define for some systems.
	* Makeconf.in: Substitute value here.

	* Makeconf.in (STATIC_LIBS): New variable.
	* configure.in: Handle --enable-static.

	* Makeconf.in (LIBEXT, SHLEXT_VER): New macros.
	(octlibdir, mk-libdir-link): Delete.

Wed Jun  4 00:07:29 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (mk-includedir-link, mk-libdir-link): Make them work.

	* configure.in (OCTAVE_PROGRAM_INVOCATION_NAME): Delete check.
	* aclocal.m4 (OCTAVE_PROGRAM_INVOCATION_NAME): Delete macro.

Mon Jun  2 13:56:26 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Move checks for RANLIB, AR, and ARFLAGS before
	checks for libf2c.

Fri May 30 14:59:59 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Fix typo in check for $with_f77.

Thu May 22 16:48:34 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (AC_OUTPUT): Remove duplicate entry for emacs/Makefile.

	* octMakefile.in (INSTALL_SUBDIRS): New macro.
	(install): Use it.

	* kpathsea: Update to new version (3.0).

	* readline: Update to new version (2.1-beta2).

Wed May 21 16:33:33 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in (install, install-strip): Append version
	information to octave-bug and mkoctfile.
	(install, install-strip): Remove octave-bug and mkoctfile first.
	Ensure link is made in include directory.

	* configure.in (octlibdir): New variable.
	* Makeconf.in: Substitute it here.	
	(do-subst-config-vals): Add -I${octincludedir} to INCFLAGS.
	Add -L${octlibdir} to LIBFLAGS.

	* Makeconf.in (mk-includedir-link, mk-libdir-link): New macros.

Mon May  5 00:58:00 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Make --enable-readline work again.
	* Makeconf.in: Ditto.

Tue Apr  8 12:38:18 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mkoctfile.in: Do substitute SH_LD and SH_LDFLAGS.  Don't