@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
 <!-- This HTML file has been created by texi2html 1.51
-     from /usr/homes/chet/src/bash/readline-src/doc/hist.texinfo on 16 April 1997 -->
+     from /usr/homes/chet/src/bash/readline-2.1/doc/hist.texinfo on 3 June 1997 -->
 
 <TITLE>GNU History Library - Table of Contents</TITLE>
 </HEAD>
@@ -44,7 +44,7 @@
 <LI><A NAME="TOC20" HREF="history.html#SEC20">Function and Variable Index</A>
 </UL>
 <P><HR><P>
-This document was generated on 16 April 1997 using the
+This document was generated on 3 June 1997 using the
 <A HREF="http://wwwcn.cern.ch/dci/texi2html/">texi2html</A>
 translator version 1.51.</P>
 </BODY>
