@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
 <!-- This HTML file has been created by texi2html 1.51
-     from /usr/homes/chet/src/bash/readline-2.1-beta2/doc/rlman.texinfo on 22 May 1997 -->
+     from /usr/homes/chet/src/bash/readline-2.1/doc/rlman.texinfo on 3 June 1997 -->
 
 <TITLE>GNU Readline Library - Table of Contents</TITLE>
 </HEAD>
@@ -70,7 +70,7 @@
 <LI><A NAME="TOC40" HREF="readline.html#SEC40">Function and Variable Index</A>
 </UL>
 <P><HR><P>
-This document was generated on 22 May 1997 using the
+This document was generated on 3 June 1997 using the
 <A HREF="http://wwwcn.cern.ch/dci/texi2html/">texi2html</A>
 translator version 1.51.</P>
 </BODY>
